# lab06

./: README.md
.github/workflows/: release.yml
_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  banking-0.1.0.0-Darwin.dmg  cmake_install.cmake
_build/_CPack_Packages/Darwin/DragNDrop/: temp.dmg
_build/banking/: Makefile  cmake_install.cmake
_build/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
homework/: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  patch.txt
